fix zoom effect on ios

--- a/themes/open_scratch/sass/_globals.scss
+++ b/themes/open_scratch/sass/_globals.scss
@@ -3,6 +3,7 @@
 ========================================================================== */
 
 html {
+
 	height:100%;  /* req for flexbox, ie sticky footer */
 	font-size: $root-font-size;
 
@@ -27,6 +28,14 @@ html {
     @include full{ /* all and (min-width: 851px) */
     	font-size: $root-font-size-full;
     }
+
+    /* prevent zoom-in effect on ios */
+    -webkit-text-size-adjust: none;
+
+    /* if still issues with zooming try this */
+    /*-webkit-text-size-adjust: 100%;
+  	-moz-text-size-adjust: none;
+  	-ms-text-size-adjust: 100%;*/
 }
 
 body {
